@@ -33,7 +33,6 @@ Dist::Zilla::Plugin::ReadmeMarkdownFromPod  = 0
 Dist::Zilla::Plugin::SchwartzRatio          = 0
 Dist::Zilla::Plugin::SurgicalPodWeaver      = 0.0015 ; to avoid circular dependencies
 Dist::Zilla::Plugin::Twitter                = 0.010 ;  Support for choosing WWW::Shorten::$site via WWW::Shorten::Simple
-Dist::Zilla::Plugin::UploadToGoogleCode     = 0
 Dist::Zilla::PluginBundle::TestingMania     = 0 ; No version prereq for easier testing
 Pod::Weaver::PluginBundle::Author::DOHERTY  = 0.006 ; bugfixes
 Pod::Weaver::Section::BugsAndLimitations    = 1.102670 ; to read from D::Z::P::Bugtracker
