@@ -1,6 +1,7 @@
 Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY
 
 {{$NEXT}}
+ - Excise long-deprecated GoogleCode release options
 
 0.41      2018-03-19
  - Remove files from the repo which are no longer produced in the build
